优化 转发缓冲读写